--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -40,6 +40,11 @@
   </div>
 
 </nav>
+
+<header class = "jumbotron">
+  <h1>BustlingBustlers</h1>
+</header>
+
 <div class='container-fluid'>
   <h2 id="title">Welcome to Ember</h2>
 
